--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -57,6 +57,13 @@ RUN $INST_SCRIPTS/libnss_wrapper.sh
 ADD ./src/common/scripts $STARTUPDIR
 RUN $INST_SCRIPTS/set_user_permission.sh $STARTUPDIR $HOME
 
+RUN yum -y install numactl-libs.x86_64 \
+    passwd \
+    libXp \
+    libpng12 \
+    libXmu.x86_64 \
+    && yum clean all
+
 USER 1000
 
 ENTRYPOINT ["/dockerstartup/vnc_startup.sh"]
