--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -28,7 +28,10 @@ ENV HOME=/headless \
     VNC_COL_DEPTH=24 \
     VNC_RESOLUTION=1280x1024 \
     VNC_PW=vncpassword \
-    VNC_VIEW_ONLY=false
+    VNC_VIEW_ONLY=false \
+    MODULEPATH=/usr/share/Modules/modulefiles:/etc/modulefiles:/act/modulefiles \
+    MODULESHOME=/usr/share/Modules
+
 WORKDIR $HOME
 
 ### Add all install scripts for further steps
