add Mellanox OFED library.

--- a/Dockerfile.centos.xfce.vnc
+++ b/Dockerfile.centos.xfce.vnc
@@ -87,6 +87,21 @@ RUN yum -y install numactl-libs.x86_64 \
     && echo "emulate ksh -c '. /etc/bashrc'" > /etc/zshenv
 RUN chmod 1777 /run/user
 
+# Set MOFED version, OS version and platform
+ENV MOFED_VERSION 4.7-3.2.9.0
+ENV OS_VERSION rhel7.7
+ENV PLATFORM x86_64
+
+# Download and install Mellanox OFED 4.5-1.0.1.0
+RUN cd /tmp/ && yum install -y pciutils numactl-libs gtk2 atk cairo gcc-gfortran tcsh lsof libnl3 libmnl ethtool tcl tk perl make && \
+    wget -q http://content.mellanox.com/ofed/MLNX_OFED-${MOFED_VERSION}/MLNX_OFED_LINUX-${MOFED_VERSION}-${OS_VERSION}-${PLATFORM}.tgz && \
+    tar -xvf MLNX_OFED_LINUX-${MOFED_VERSION}-${OS_VERSION}-${PLATFORM}.tgz && \
+    MLNX_OFED_LINUX-${MOFED_VERSION}-${OS_VERSION}-${PLATFORM}/mlnxofedinstall --user-space-only --without-fw-update -q  --distro rhel7.7 && \
+    cd .. && \
+    rm -rf ${MOFED_DIR} && \
+    rm -rf *.tgz && \
+    yum clean all
+
 USER 1000
 
 ENTRYPOINT ["/dockerstartup/vnc_startup.sh"]
