--- a/Dockerfile.centos.cuda.xfce.vnc.ofed-4.9
+++ b/Dockerfile.centos.cuda.xfce.vnc.ofed-4.9
@@ -91,11 +91,11 @@ RUN yum -y install numactl-libs.x86_64 \
 RUN chmod 1777 /run/user
 
 # Set MOFED version, OS version and platform
-ENV MOFED_VERSION 4.7-3.2.9.0
+ENV MOFED_VERSION 4.9-2.2.4.0
 ENV OS_VERSION rhel7.7
 ENV PLATFORM x86_64
 
-# Download and install Mellanox OFED 4.5-1.0.1.0
+# Download and install Mellanox OFED driver
 RUN cd /tmp/ && yum install -y pciutils numactl-libs gtk2 atk cairo gcc-gfortran tcsh lsof libnl3 libmnl ethtool tcl tk perl make && \
     wget -q http://content.mellanox.com/ofed/MLNX_OFED-${MOFED_VERSION}/MLNX_OFED_LINUX-${MOFED_VERSION}-${OS_VERSION}-${PLATFORM}.tgz && \
     tar -xvf MLNX_OFED_LINUX-${MOFED_VERSION}-${OS_VERSION}-${PLATFORM}.tgz && \
