--- a/Dockerfile.centos.xfce.vnc.ofed-4.9
+++ b/Dockerfile.centos.xfce.vnc.ofed-4.9
@@ -1,6 +1,6 @@
 # This Dockerfile is used to build an headles vnc image based on Centos
 
-FROM nvidia/cuda:10.1-runtime-centos7
+FROM centos:7.7.1908
 
 MAINTAINER Simon Hofmann "simon.hofmann@consol.de"
 ENV REFRESHED_AT 2018-10-29
@@ -80,9 +80,6 @@ RUN yum -y install numactl-libs.x86_64 \
     zsh \
     git \
     mesa-libGLU-devel \
-    libgomp \
-    libtiff-devel.x86_64 \
-    fftw-devel.x86_64 \
     &&  export ZSH=/usr/share/oh-my-zsh \
     &&  wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | zsh \
     && yum clean all \
@@ -91,11 +88,11 @@ RUN yum -y install numactl-libs.x86_64 \
 RUN chmod 1777 /run/user
 
 # Set MOFED version, OS version and platform
-ENV MOFED_VERSION 4.7-3.2.9.0
+ENV MOFED_VERSION 4.9-2.2.4.0
 ENV OS_VERSION rhel7.7
 ENV PLATFORM x86_64
 
-# Download and install Mellanox OFED 4.5-1.0.1.0
+# Download and install Mellanox OFED driver
 RUN cd /tmp/ && yum install -y pciutils numactl-libs gtk2 atk cairo gcc-gfortran tcsh lsof libnl3 libmnl ethtool tcl tk perl make && \
     wget -q http://content.mellanox.com/ofed/MLNX_OFED-${MOFED_VERSION}/MLNX_OFED_LINUX-${MOFED_VERSION}-${OS_VERSION}-${PLATFORM}.tgz && \
     tar -xvf MLNX_OFED_LINUX-${MOFED_VERSION}-${OS_VERSION}-${PLATFORM}.tgz && \
