--- a/Dockerfile.centos.xfce.vnc.ofed-4.9
+++ b/Dockerfile.centos.xfce.vnc.ofed-4.9
@@ -98,8 +98,8 @@ RUN cd /tmp/ && yum install -y pciutils numactl-libs gtk2 atk cairo gcc-gfortran
     tar -xvf MLNX_OFED_LINUX-${MOFED_VERSION}-${OS_VERSION}-${PLATFORM}.tgz && \
     MLNX_OFED_LINUX-${MOFED_VERSION}-${OS_VERSION}-${PLATFORM}/mlnxofedinstall --user-space-only --without-fw-update -q  --distro rhel7.7 && \
     cd .. && \
-    rm -rf ${MOFED_DIR} && \
-    rm -rf *.tgz && \
+    rm -rf /tmp/${MOFED_DIR} && \
+    rm -rf /tmp/*.tgz && \
     yum clean all
 
 COPY ./src/common/xfce/xinitrc /etc/xdg/xfce4/xinitrc
